Use bindings for replay card